<resources>
    <string name="app_name">SpendSmart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">CLose</string>
    <string name="email_username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="category">Category</string>
    <string name="transactions">Transaction History</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="cash_flow_overview">Cash Flow Overview</string>
    <string name="last_30_days">This Month</string>
    <string name="net_balance">Net Balance</string>
    <string name="expense">Expense</string>
    <string name="reminder_text">This is a reminder!!!!</string>
    <string name="reminder">Reminder</string>
    <string name="expenses_monthly">Expenses (This Month)</string>
</resources>